🥅 Handle exceptions better

--- a/docs/notebooks/example.ipynb
+++ b/docs/notebooks/example.ipynb
@@ -25,7 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "adata = AnnData(np.random.normal(size=(20, 10)))"
+    "rng = np.random.default_rng(42)\n",
+    "adata = AnnData(rng.normal(size=(20, 10)))"
    ]
   },
   {
